<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rl_1">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_description_back"
            app:srcCompat="@drawable/back"
            android:id="@+id/backButton"
            style="@android:style/Widget.Material.Button.Borderless"
            android:layout_alignParentStart="true"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_description_new_folder"
            app:srcCompat="@drawable/new_folder"
            android:id="@+id/newFolderButton"
            style="@android:style/Widget.Material.Button.Borderless"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/currentDir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_1"
        android:paddingBottom="10dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/dummy_text_view"
        android:textColor="?android:attr/textColorPrimary"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/explorer_listview"
        android:layout_below="@+id/currentDir"/>
</RelativeLayout>